# cars

./: Makefile  pyproject.toml
src/: app.py
src/templates/: add.html  cars.html  details.html  index.html
